Fixed problem with forecast data not showing corretly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,3 +61,9 @@ body {
     border-color: black;
 }
 
+.custom-weather-icon {
+    background-color: var(--clickable);
+}
+.custom-weather-banner {
+    background-color: var(--clickablehover);
+}
